fixed header-image alignment

--- a/code/style/header-footer.css
+++ b/code/style/header-footer.css
@@ -36,7 +36,7 @@ body{
 
     .header-logo {
         margin-left: 15px;
-        text-align: center;
+        text-align: left;
     }
 
 }
@@ -385,6 +385,7 @@ footer table td:first-child {
 }
 
 @media only screen and (max-width: 400px){
+    .col-sm-2,
     .col-sm-4, 
     .col-sm-6 {
         padding-left: 9px;
